--- a/css/style.css
+++ b/css/style.css
@@ -635,6 +635,17 @@ input[type="radio"].visually-hidden {
   border-radius: 50%;
 }
 
+.filter-input-radio:checked + label::before {
+  content: "";
+
+  position: absolute;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+}
+
 .filter-input:disabled + label {
   color: #000000;
 
