--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,6 @@ img {
 .user-navigation .login-link{
   position: relative;
   padding-left: 50px;
-  /* background-color: blue; */
 }
 
 .login-link::before {
@@ -635,15 +634,18 @@ input[type="radio"].visually-hidden {
   border-radius: 50%;
 }
 
-.filter-input-radio:checked + label::before {
+.filter-input-radio:checked + label::after {
   content: "";
 
   position: absolute;
+  top: 5px;
+  left: -36px;
 
   width: 8px;
   height: 8px;
 
   background-color: #000000;
+  border-radius: 50%;
 }
 
 .filter-input:disabled + label {
@@ -690,19 +692,44 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-item a {
+  display: flex;
+  flex-direction: column;
+
   color: #000000;
 }
 
 .catalog-item h3 {
+  order: 1;
+  margin-top: 17px;
+  margin-bottom: 12px;
+  margin-left: 16px;
+  margin-right: 15px;
+
   font-size: 14px;
   line-height: 18px;
 }
 
 .catalog-category {
+  display: block;
   text-transform: none;
 }
 
+.catalog-item-image {
+  width: 220px;
+  height: 165px;
+  margin: 0;
+}
+
+.catalog-item-price {
+  display: flex;
+  margin: 15px;
+  margin-top: 0;
+}
+
 .catalog-item-price b {
+  width: 112px;
+  padding: 13px 25px 11px;
+
   font-size: 14px;
   line-height: 18px;
   text-align: center;
@@ -711,18 +738,35 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-item-price .button {
+  width: 50px;
+  padding: 13px 18px 11px;
+  margin-right: 0;
+
   line-height: 20px;
   color: #ffffff;
 }
 
 .pagination-list {
+  display: flex;
+  flex-wrap: wrap;
+
   padding: 0;
   margin: 0;
 
   list-style: none;
 }
 
+.pagination-item {
+  margin-right: 5px;
+}
+
+.pagination-item:last-child {
+  margin-right: 0;
+}
+
 .pagination-item a {
+  display: block;
+  padding: 10px 19px;
   color: #ffffff;
 
   background-color: #000000;
