--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,7 @@ input[type="radio"].visually-hidden {
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-bottom: 50px;
+  margin-bottom: 55px;
 
 }
 
@@ -528,7 +528,7 @@ input[type="radio"].visually-hidden {
 
   position: absolute;
   top: 8px;
-  right: -25px;
+  right: -26px;
 
   width: 8px;
   height: 8px;
@@ -808,15 +808,44 @@ input[type="radio"].visually-hidden {
 }
 
 .product-photo-preview {
+  display: flex;
+  padding: 0;
+  margin: 0;
+
   list-style: none;
+
 }
 
 .product-photo-preview li {
+  widthh: 140px;
+  height: 149px;
+  margin-right: 20px;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
+.product-photo-preview li:nth-child(3n) {
+  margin-right: 0;
+}
+
 .product-photo-full {
+  width: 460px;
+  height: 498px;
+  margin: 0;
+  margin-bottom: 20px;
+
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-description {
+  display: flex;
+  justify-content: space-between;
+
+  padding-right: 10px;
+  margin-bottom: 29px;
+}
+
+.product-description p {
+  width: 200px;
 }
 
 .product-article {
@@ -825,24 +854,77 @@ input[type="radio"].visually-hidden {
 }
 
 .product-price b {
-  line-height: 20px;
+  width: 112px;
+  padding-top: 13px;
+  padding-left: 36px;
+  padding-right: 36px;
+  padding-bottom: 11px;
+
+  line-height: 18px;
   text-align: center;
 
   background-color: #e5e5e5;
+
+  box-sizing: border-box;
+}
+
+.product-price .button {
+  padding-left: 17px;
+  padding-right: 17px;
 }
 
 .product-info {
   width: 390px;
+  padding-left: 90px;
+  padding-top: 19px;
+}
+
+.product-info .product-price {
+  display: flex;
+  margin-bottom: 63px;
+}
+
+.product-info .product-text {
+  margin-bottom: 35px;
+}
+
+.product-info p {
+  margin: 0;
 }
 
 .product-info h3 {
+  margin: 0;
+  margin-bottom: 27px;
 
   font-size: 24px;
   line-height: 30px;
 }
 
 .product-info ul {
+  margin: 0;
+  padding: 0;
+
   list-style: none;
+}
+
+.product-info li {
+  position: relative;
+  padding-left: 23px;
+}
+
+.product-info li::before {
+  content: "";
+
+  position: absolute;
+  top: 7px;
+  left: 2px;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+
+  transform: rotate(45deg);
 }
 
 .main-footer {
