--- a/css/style.css
+++ b/css/style.css
@@ -965,20 +965,6 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 
-.modal {
-  color: #000000;
-
-  background-color: #f8f3f0;
-  background-image: url("http://assets.pencode.ru/barber/img/pattern-light.jpg");
-  background-position: 0 0;
-  background-repeat: repeat;
-}
-
-.modal h2 {
-  font-size: 30px;
-  line-height: 42px;
-}
-
 .login-form input[type="text"],
 .login-form input[type="password"] {
   font: inherit;
@@ -991,20 +977,6 @@ input[type="radio"].visually-hidden {
 
 .login-form input:focus {
   border-color: #663d15;
-}
-
-.login-checkbox:hover,
-.login-checkbox:focus {
-  color: #663d15;
-}
-
-.restore {
-  text-decoration: underline;
-}
-
-.restore:hover,
-.restore:focus {
-  text-decoration: none;
 }
 
 /*For other pages (not Index)*/
@@ -1039,8 +1011,6 @@ input[type="radio"].visually-hidden {
   width: 111px;
   height: 24px;
   padding: 23px 20px;
-
-/*    display: block; */
 }
 
 .other-page .user-navigation {
@@ -1049,4 +1019,213 @@ input[type="radio"].visually-hidden {
 
 .other-page .main-footer {
   margin-top: 45px;
+}
+
+/* Всплывающая форма */
+
+.modal {
+  position: fixed;
+  color: #000000;
+
+  background-color: #f8f3f0;
+  background-image: url("http://assets.pencode.ru/barber/img/pattern-light.jpg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+.modal h2 {
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.modal-login {
+  top: 120px;
+  left: 50%;
+
+  display: none;
+
+  width: 300px;
+  margin-left: -230px;
+  padding: 50px 80px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 0;
+  right: -34px;
+
+  width: 22px;
+  height: 22px;
+
+  font-size: 0;
+  border: 0;
+  background-color: transparent;
+
+  cursor: pointer;
+}
+
+.modal-close::after,
+.modal-close::before {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  left: 2px;
+
+  width: 19px;
+  height: 3px;
+
+  background-color: #b0b0b0;
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
+
+.modal-login h2 {
+  margin: 0;
+  margin-bottom: 20px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.modal-description {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.login-form b {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+  box-sizing: border-box;
+  width: 300px;
+  padding: 10px 15px;
+  padding-right: 40px;
+
+  font: inherit;
+  color: #000000;
+  text-transform: uppercase;
+
+  background-color: #f9f6f3;
+  border 2px solid #000000;
+}
+
+.login-form input:focus {
+  border-color: #663d15;
+}
+
+.login-form .login-help {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 15px 0;
+}
+
+.login-icon-user {
+  background-image: url("http://assets.pencode.ru/barber/img/user.svg");
+  background-position: 270px center;
+  background-repeat: no-repeat;
+}
+
+.password-icon-user {
+  background-image: url("http://assets.pencode.ru/barber/img/lock.svg");
+  background-position: 270px center;
+  background-repeat: no-repeat;
+}
+
+.login-checkbox {
+  position: relative;
+
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+
+.login-checkbox:hover,
+.login-checkbox:focus {
+  color: #663d15;
+}
+
+.login-checkbox input[type="checkbox"] + .checkbox-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 17px;
+  height: 17px;
+  border: 2px solid #000000;
+}
+
+.login-checkbox input[type="checkbox"]:focus + .checkbox-indicator {
+  border-color: #663d15;
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+.login-checkbox input[type="checkbox"]:focus + .checkbox-indicator::before,
+.login-checkbox input[type="checkbox"]:focus + .checkbox-indicator::after {
+  content: "";
+
+  position: absolute;
+  top: 8px;
+  left: 1px;
+
+  width: 15px;
+  height: 2px;
+
+  background-color: #000000;
+}
+
+.login-checkbox input[type="checkbox"]:focus + .checkbox-indicator::before {
+  transform: rotate(45deg);
+}
+
+.login-checkbox input[type="checkbox"]:focus + .checkbox-indicator::after {
+  transform: rotate(-45deg);
+}
+
+.restore {
+  color: #000000;
+  text-decoration: underline;
+}
+
+.restore:hover,
+.restore:focus {
+  text-decoration: none;
+}
+
+.login-form .button {
+  width: 100%;
+  margin-right: 0;
+
+  cursor: pointer;
+}
+
+.modal-map {
+  top: 50%;
+  left: 50%;
+
+  display: none;
+
+  width: 779px;
+  height: 575px;
+
+  margin-top: -280px;
+  margin-left: -400px;
+
+  /* border: 7px solid white; */
+}
+
+.modal-map p {
+  margin: 0;
 }
