Fixed modal on all pages

--- a/css/style.css
+++ b/css/style.css
@@ -1043,7 +1043,7 @@ input[type="radio"].visually-hidden {
   top: 120px;
   left: 50%;
 
-  display: none;
+  /* display: none; */
 
   width: 300px;
   margin-left: -230px;
