--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ input[type="radio"].visually-hidden {
 .inner-content h2 {
   margin-top: 60px;
   margin-bottom: 30px;
-  
+
   font-size: 24px;
   line-height: 30px;
 }
@@ -434,9 +434,9 @@ input[type="radio"].visually-hidden {
 .inner-content h3 {
   margin-top: 60px;
   margin-bottom: 30px;
-  
+
   font-size: 20px;
-  line-height: 24px;  
+  line-height: 24px;
 }
 
 .inner-content p {
@@ -453,22 +453,81 @@ input[type="radio"].visually-hidden {
 
 .inner-content td {
   padding: 10px 15px;
-  
+
   border: 2px solid #000000;
 }
 
 .inner-content .big-heading {
   display: flex;
   align-items: center;
-  
+
   margin-top: 55px;
   margin-bottom: 65px;
-  
+
   font-size: 48px;
   line-height: 48px;
   text-align: center;
-  
-  background-color: red;
+}
+
+.inner-content .big-heading::before,
+.inner-content .big-heading::after {
+  content: "";
+
+  flex-grow: 1;
+  flex-shrink: 0;
+
+  width: 50px;
+  height: 2px;
+
+  background: #000000;
+}
+
+.inner-content .big-heading::before {
+  margin-right: 25px;
+}
+
+.inner-content .big-heading::after {
+  margin-left: 25px;
+}
+
+.custom-list-1 {
+  margin: 14px 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.custom-list-1 li {
+  position: relative;
+
+  margin-bottom: 15px;
+  padding-left: 20px;
+}
+
+.custom-list-1 li::before {
+  content: "";
+
+  position: absolute;
+  top: 8px;
+  left: 0;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.custom-table-1 {
+  width: 100%;
+}
+
+.custom-table-1 td {
+  width: 50%;
+}
+
+.custom-table-1 td:last-child {
+  text-align: center;
 }
 
 .main-footer {
@@ -979,6 +1038,40 @@ input[type="radio"].visually-hidden {
   transform: rotate(45deg);
 }
 
+.inner-columns {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  margin: 60px 0;
+}
+
+.inner-column-left,
+.inner-column-right {
+  width: 460px;
+}
+
+.inner-column-left *:first-child,
+.inner-column-right *:first-child {
+  margin-top: 0;
+}
+
+.inner-column-left *:last-child,
+.inner-column-right *:last-child {
+  margin-bottom: 0;
+}
+
+.inner-columns > h3:first-child {
+  width: 460px;
+  margin-top: 0;
+  margin-right: 460px;
+  margin-right: calc(100% - 460px);
+}
+
+.short-text {
+  padding-right: 80px;
+}
+
 .main-footer {
     display: flex;
   justify-content: space-between;
@@ -1095,7 +1188,7 @@ input[type="radio"].visually-hidden {
   top: 120px;
   left: 50%;
 
-  display: none; 
+  display: none;
 
   width: 300px;
   margin-left: -230px;
